<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/AppBarTheme"
                app:contentScrim="?android:attr/colorPrimary"
                app:expandedTitleMarginEnd="48dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/backdropImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    />

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:cardBackgroundColor="@color/background"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="132dp"
                        android:gravity="center"
                        android:paddingEnd="24dp"
                        android:paddingStart="24dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="@string/tv_title"/>

                <LinearLayout
                        android:id="@+id/releaseInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:baselineAligned="false"
                        android:orientation="horizontal">

                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1">

                        <TextView
                                android:id="@+id/ratingLabelTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_rating"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"/>

                        <TextView
                                android:id="@+id/ratingTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                android:textColor="@color/colorAccent"
                                android:textSize="26sp"
                                tools:text="@string/tv_ratingdec"/>
                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="49dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1.2">

                        <TextView
                                android:id="@+id/dateLabelTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_release"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"/>

                        <TextView
                                android:id="@+id/release_date_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                tools:text="Dec 13\n1989"/>
                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="39dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="2">

                        <TextView
                                android:id="@+id/directorLabelTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_popularity"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"/>

                        <TextView
                                android:id="@+id/popularityTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                tools:text="5.04"/>
                    </FrameLayout>

                </LinearLayout>

                <TextView
                        android:id="@+id/plotTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lineSpacingExtra="4dp"
                        android:paddingBottom="16dp"
                        android:paddingEnd="24dp"
                        android:paddingStart="24dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        tools:text="This is gonna be a plot synopsis of the mMovie. This data will be fetched by the TMDB API. And this will contain info of the mMovie script."/>





            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
            android:id="@+id/posterCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="bottom|center">

        <ImageView
                android:id="@+id/image_detail"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:contentDescription="This is a poster for the mMovie."
                android:scaleType="centerCrop"
                android:transitionName="posterTransition"/>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatdetail"
            android:src="@drawable/ic_no_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="bottom|right|end"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>